# yt-playlist-organizer

./: .flake8  .gitignore  .playlist_move_progress.json  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  app.py  debug_playlists.py  env.example  move_watch_later_playwright.py  move_watch_later_robust.py  move_watch_later_to_playlist.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_playwright.py
.github/workflows/: ci.yml
.yt-user-data/: Local State
.yt-user-data/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Visited Links  Web Data
.yt-user-data/Default/Cache/Cache_Data/: 0028206aa85901c9_0  00c5754e627e24e1_0  00c866110676c509_0  01084fccfd720b2a_0  (+962 more)
.yt-user-data/Default/DawnGraphiteCache/: data_1  index
.yt-user-data/Default/DawnWebGPUCache/: data_1  index
.yt-user-data/Default/Extension Rules/: LOG
.yt-user-data/Default/Extension Scripts/: LOG
.yt-user-data/Default/Extension State/: LOG  LOG.old
.yt-user-data/Default/GPUCache/: data_0  data_1  data_2  index
.yt-user-data/Default/Session Storage/: LOG  LOG.old
.yt-user-data/Default/Sessions/: Session_13399660573789129  Session_13399661720931820  Tabs_13399660574243487  Tabs_13399661721164163
.yt-user-data/Default/Site Characteristics Database/: LOG  LOG.old
.yt-user-data/Default/WebStorage/: QuotaManager
.yt-user-data/Default/shared_proto_db/: LOG  LOG.old
.yt-user-data/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  f_000024  f_000025  f_000026  f_000027  (+43 more)
.yt-user-data/GraphiteDawnCache/: data_1  index
.yt-user-data/ShaderCache/: data_1  index
.yt-user-data/segmentation_platform/: ukm_db  ukm_db-journal
docs/: architecture.md
scripts/: migrate_from_v1.py
src/yt_organizer/: __init__.py
src/yt_organizer/api/: __init__.py  auth.py  gemini.py  youtube.py  youtube_optimized.py
src/yt_organizer/automation/: __init__.py  base.py  watch_later.py
src/yt_organizer/cli/: __init__.py  main.py
src/yt_organizer/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  models.py  performance.py  utils.py
src/yt_organizer/organizers/: __init__.py  batch_processor.py  classifier_optimized.py  plan_apply_organizer.py  playlist_manager.py  topic_classifier.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_config.py  test_models.py  test_performance.py  test_utils.py
(+233 files in other folders)
